--- a/app/src/main/res/layout/dialog_date.xml
+++ b/app/src/main/res/layout/dialog_date.xml
@@ -1,7 +1,22 @@
-<DatePicker
-    android:id="@+id/dialog_date_date_picker"
-    android:layout_width="wrap_content"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:calendarViewShown="false"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-</DatePicker>
+    android:orientation="vertical">
+
+    <DatePicker
+        android:id="@+id/dialog_date_date_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false"/>
+
+
+    <Button
+        android:id="@+id/ok_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        style="?android:attr/buttonBarButtonStyle"
+        android:text="@string/ok_button_text" />
+</LinearLayout>
+
