--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -59,4 +59,11 @@
         android:layout_marginLeft="16dp"
         android:text="@string/crime_report_text"/>
 
+    <Button
+        android:id="@+id/crime_call"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/crime_call_text"
+        />
+
 </LinearLayout>
