--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <include layout="@layout/view_camera_and_title" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
